# voice-clone

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
examples/: quickstart.sh
scripts/: build.sh
src/: audio_recorder.cpp  audio_recorder.h  feature_extractor.cpp  feature_extractor.h  main.cpp  speech_synthesizer.cpp  speech_synthesizer.h  voice_trainer.cpp  voice_trainer.h
